--- a/config/phpstan/baseline.neon
+++ b/config/phpstan/baseline.neon
@@ -1143,12 +1143,12 @@ parameters:
 		-
 			message: "#^Cannot call method toArray\\(\\) on mixed\\.$#"
 			count: 1
-			path: ../../lib/private/Core/Service/App/LoaderServiceService.php
+			path: ../../lib/private/Core/Service/App/LoaderService.php
 
 		-
-			message: "#^Method Keestash\\\\Core\\\\Service\\\\App\\\\LoaderServiceService\\:\\:getDefaultApp\\(\\) should return KSP\\\\Core\\\\DTO\\\\App\\\\IApp\\|null but returns mixed\\.$#"
+			message: "#^Method Keestash\\\\Core\\\\Service\\\\App\\\\LoaderService\\:\\:getDefaultApp\\(\\) should return KSP\\\\Core\\\\DTO\\\\App\\\\IApp\\|null but returns mixed\\.$#"
 			count: 1
-			path: ../../lib/private/Core/Service/App/LoaderServiceService.php
+			path: ../../lib/private/Core/Service/App/LoaderService.php
 
 		-
 			message: "#^Method Keestash\\\\Core\\\\Service\\\\Cache\\\\NullService\\:\\:set\\(\\) has parameter \\$value with no type specified\\.$#"
