--- a/config/phpstan/phpstan.neon
+++ b/config/phpstan/phpstan.neon
@@ -7,6 +7,7 @@ parameters:
 	    - %rootDir%/../../../apps/*/Repository/Migration/*
 	checkMissingIterableValueType: false
 	treatPhpDocTypesAsCertain: false
+	checkGenericClassInNonGenericObjectType: false
 	reportUnmatchedIgnoredErrors: true
 	ignoreErrors:
 	    - '#Property (.*) is never read, only written+\.#'
