--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "sass-loader": "^11.1.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "loader-utils": "^2.0.4",
+    "json5": "^2.2.3"
   },
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.0",
