--- a/composer.json
+++ b/composer.json
@@ -79,8 +79,7 @@
     "phpstan/phpstan": "^1.0",
     "phpunit/phpunit": "9.6.4",
     "squizlabs/php_codesniffer": "^3.5",
-    "symfony/var-dumper": "^5.2",
-    "vimeo/psalm": "^4"
+    "symfony/var-dumper": "^5.2"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
