add password change fixes add csp headers

--- a/.gitignore
+++ b/.gitignore
@@ -286,7 +286,6 @@ smtp.php
 /lib/private/Core/System/RateLimit/tmp.json
 
 .ignored
-apps/LDAP
-apps/LDAP/*
 apps/Payment
 apps/Payment/*
+/apps/LDAP/
