--- a/config/docker/web/xdebug/xdebug.ini
+++ b/config/docker/web/xdebug/xdebug.ini
@@ -1,8 +1,7 @@
 zend_extension = xdebug
 
 [xdebug]
-xdebug.mode = develop,debug
+xdebug.mode = develop,debug,coverage
 xdebug.client_host = host.docker.internal
 xdebug.start_with_request = yes
-xdebug.remote_enable = 1
-xdebug.remote_connect_back = 1
+xdebug.discover_client_host = 1
