--- a/config/phpstan/baseline.neon
+++ b/config/phpstan/baseline.neon
@@ -746,6 +746,11 @@ parameters:
 			path: ../../apps/Settings/Api/User/Get.php
 
 		-
+			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\User\\\\IUser\\:\\:setPassword\\(\\)\\.$#"
+			count: 1
+			path: ../../apps/Settings/Api/User/UpdatePassword.php
+
+		-
 			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\File\\\\IFile\\:\\:setDirectory\\(\\)\\.$#"
 			count: 1
 			path: ../../apps/Settings/Api/User/UpdateProfileImage.php
