--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "apps/Payment"]
 	path = apps/Payment
-	url = git@github.com-doganoo:keestash/payment.git
+	url = ssh://git@github.com-doganoo:keestash/payment.git
 [submodule "apps/LDAP"]
 	path = apps/LDAP
-	url = git@github.com-doganoo:keestash/ldap.git
-[submodule "apps/Marketing"]
-	path = apps/Marketing
-	url = git@github.com-doganoo:keestash/marketing.git
+	url = ssh://git@github.com-doganoo:keestash/ldap.git
