--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "source": "https://github.com/keestash/server"
   },
   "require": {
-    "php": "^8.2",
+    "php": "^8.3",
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-fileinfo": "*",
@@ -57,6 +57,7 @@
     "monolog/monolog": "^2.2",
     "nikolaposa/rate-limit": "^3.0",
     "phpmailer/phpmailer": "^6.1",
+    "promphp/prometheus_client_php": "^2.10",
     "psr/container": "^1.0",
     "psr/log": "^1.1",
     "ramsey/uuid": "^4.1",
@@ -77,6 +78,8 @@
     "mockery/mockery": "^1.4",
     "phpcompatibility/php-compatibility": "^9.3",
     "phpstan/phpstan": "^1.0",
+    "phpstan/phpstan-deprecation-rules": "^1.1",
+    "phpstan/phpstan-strict-rules": "^1.5",
     "phpunit/phpunit": "^10",
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/var-dumper": "^5.2"
@@ -105,7 +108,7 @@
   },
   "scripts": {
     "add-php-compatibility": "\"vendor/bin/phpcs\" --config-set installed_paths vendor/phpcompatibility/php-compatibility",
-    "php-compatibility": "./vendor/bin/phpcs -p . --standard=PHPCompatibility --runtime-set testVersion 7.4-8.2 --extensions=php --ignore=vendor/",
+    "php-compatibility": "./vendor/bin/phpcs -p . --standard=PHPCompatibility --runtime-set testVersion 8.2-8.3 --extensions=php --ignore=vendor/",
     "phpstan": "cd vendor/bin && ./phpstan analyse -c ../../config/phpstan/phpstan.neon ../../apps/ ../../lib --level 9 --memory-limit=2G",
     "phpstan-baseline": "cd vendor/bin && ./phpstan analyse -c ../../config/phpstan/phpstan.neon ../../apps/ ../../lib --level 9 --memory-limit=2G --generate-baseline ../../config/phpstan/baseline.neon",
     "test": [
