--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,13 +53,33 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./config/docker/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus  # Prometheus data
     networks:
       - keestash-network
     ports:
       - '9090:9090'
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./config/docker/grafana:/etc/grafana/provisioning  # Grafana provisioning files
+    depends_on:
+      - prometheus
+    networks:
+      - keestash-network
+  #    restart: unless-stopped
+
 volumes:
   keestash_db:
+  grafana-data:
+  prometheus-data:
 
 networks:
   keestash-network:
