--- a/config/docker/web/apache/keestash.conf
+++ b/config/docker/web/apache/keestash.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 
   ServerAdmin info@keestash.com
-  DocumentRoot /var/www/html
+  DocumentRoot /var/www/html/public
   ErrorLog /var/www/html/data/apache_error.log
   CustomLog /var/www/html/data/apache_access.log combined
 
@@ -14,7 +14,7 @@
   SSLCertificateKeyFile /etc/apache2/ssl/cert-key.pem
 
   ServerAdmin info@keestash.com
-  DocumentRoot /var/www/html
+  DocumentRoot /var/www/html/public
   ErrorLog /var/www/html/data/apache_error.log
   CustomLog /var/www/html/data/apache_access.log combined
 
