--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
     "symfony/ldap": "^5.4",
     "symfony/mime": "^4.4",
     "symfony/string": "^5.4",
-    "twig/twig": "3.14.0"
+    "symfony/var-dumper": "^6.4",
+    "twig/twig": "^3.16"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.8",
@@ -80,8 +81,7 @@
     "phpstan/phpstan-strict-rules": "^1.5",
     "phpunit/phpunit": "^10",
     "rector/rector": "^1.2",
-    "squizlabs/php_codesniffer": "^3.5",
-    "symfony/var-dumper": "^5.2"
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "conflict": {
     "stevebauman/unfinalize": "*"
